# project2_Sapronov_Dmitrii_M25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/: constants.py  decorators.py
src/primitive_db/: core.py  engine.py  main.py  parser.py  utils.py
