[tool.poetry]
name = "project2-sapronov-dmitrii-m25-555"
version = "0.1.0"
description = ""
authors = ["dmitriy.sapronov <dmitriy.sapronov@sbermarket.ru>"]
readme = "README.md"

 packages = [
     { include = "src" },
 ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"
