[tool.poetry]
name = "project2-sapronov-dmitrii-m25-555"
version = "0.1.0"
description = ""
authors = ["dmitriy.sapronov <dmitriy.sapronov@sbermarket.ru>"]
readme = "README.md"

 packages = [
     { include = "src" },
 ]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
prompt = "^0.4.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["venv", ".venv", "dist", "__pycache__", "constants.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = [] 